# keycap_playground

./: .flake8  AGENTS.md  Makefile  README.md  pyproject.toml
configs/: numbers.toml  single_key.toml
scripts/: gem_full.py  keycap.py  keyplay.py  riskeyboard_70.py  riskeycap_full.py
src/: __init__.py  __main__.py  keycap.py  keyplay.py  riskeycap.py
tests/: test_constants.py  test_keycap.py  test_keycap_edge_cases.py  test_keycap_properties.py  test_keyplay.py  test_make_commands.py  test_riskeycap.py
